--- a/smoke_test/run_params.yaml
+++ b/smoke_test/run_params.yaml
@@ -4,6 +4,8 @@ viz_interval_type: 0
 #viz_interval_type: 1
 #viz_interval_type: 2
 t_viz_interval: 1.e-9
+wall_time_scale: 10000
+wall_penalty_amount: 0
 nrestart: 10
 nhealth: 1
 nstatus: 1
